feat: setup github actions ci pipeline
