# models/transaction.go
@@ -1,0 +1,17 @@
+package models
+
+import "time"
+
+type Transaction struct {
+	ID         int       `json:"id"`
+	UserID     int       `json:"user_id"`
+	ProductID  int       `json:"product_id"`
+	Quantity   int       `json:"quantity"`
+	TotalPrice int       `json:"total_price"`
+	CreatedAt  time.Time `json:"created_at"`
+}
+
+type CheckoutRequest struct {
+	ProductID int `json:"product_id" validate:"required"`
+	Quantity  int `json:"quantity" validate:"required,gt=0"`
+}
